[gd_scene load_steps=8 format=3 uid="uid://bicrac1hovbg3"]

[ext_resource type="Script" path="res://scenes/levels/foosball.gd" id="2_wbgj5"]
[ext_resource type="Texture2D" uid="uid://cos57g4lksihe" path="res://scenes/player/circle.png" id="3_onaeo"]
[ext_resource type="PackedScene" uid="uid://cn316h2nobctw" path="res://scenes/obstacles/foosball/foosball_player_bar.tscn" id="5_tfkpo"]
[ext_resource type="PackedScene" uid="uid://bsyaiflbws7y4" path="res://scenes/obstacles/walls/wall.tscn" id="6_n6ows"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ntjtk"]
size = Vector2(800, 40)

[sub_resource type="Curve" id="Curve_qp73q"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Gradient" id="Gradient_e1xp3"]
offsets = PackedFloat32Array(0.47644, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[node name="Level" type="Node2D"]
script = ExtResource("2_wbgj5")

[node name="BackGround" type="ColorRect" parent="."]
offset_left = -3108.0
offset_top = -4415.0
offset_right = 4892.0
offset_bottom = 3585.0
color = Color(0.184314, 0.184314, 0.184314, 1)

[node name="TableGrass" type="ColorRect" parent="."]
offset_left = 296.0
offset_top = -2219.0
offset_right = 1096.0
offset_bottom = -2179.0
scale = Vector2(1.28, 74.4)
color = Color(0, 1, 0, 1)

[node name="Paint" type="Node2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Paint"]
modulate = Color(0.784314, 0.784314, 0.784314, 1)
position = Vector2(800.68, 372)
scale = Vector2(2.28002, 1.48)
texture = ExtResource("3_onaeo")

[node name="Sprite2D2" type="Sprite2D" parent="Paint"]
modulate = Color(0, 1, 0, 1)
position = Vector2(803, 355)
scale = Vector2(1.76002, 1)
texture = ExtResource("3_onaeo")

[node name="Sprite2D3" type="Sprite2D" parent="Paint"]
modulate = Color(0.784314, 0.784314, 0.784314, 1)
position = Vector2(800, -659)
scale = Vector2(2, 2)
texture = ExtResource("3_onaeo")

[node name="Sprite2D4" type="Sprite2D" parent="Paint"]
modulate = Color(0, 1, 0, 1)
position = Vector2(800.162, -660)
scale = Vector2(1.7, 1.7)
texture = ExtResource("3_onaeo")

[node name="ColorRect" type="ColorRect" parent="Paint"]
offset_left = 275.0
offset_top = -681.0
offset_right = 1325.0
offset_bottom = -641.0
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect4" type="ColorRect" parent="Paint"]
offset_left = 330.0
offset_top = 317.0
offset_right = 1270.0
offset_bottom = 357.0
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect7" type="ColorRect" parent="Paint"]
offset_left = 540.0
offset_top = 480.0
offset_right = 1060.0
offset_bottom = 520.0
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect2" type="ColorRect" parent="Paint"]
offset_left = 370.0
offset_top = 357.0
offset_right = 770.0
offset_bottom = 397.0
rotation = 1.5708
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect5" type="ColorRect" parent="Paint"]
offset_left = 580.0
offset_top = 497.0
offset_right = 880.0
offset_bottom = 537.0
rotation = 1.5708
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect6" type="ColorRect" parent="Paint"]
offset_left = 1060.0
offset_top = 497.0
offset_right = 1360.0
offset_bottom = 537.0
rotation = 1.5708
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect3" type="ColorRect" parent="Paint"]
offset_left = 1270.0
offset_top = 357.0
offset_right = 1670.0
offset_bottom = 397.0
rotation = 1.5708
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect8" type="ColorRect" parent="Paint"]
offset_left = 471.0
offset_top = 357.0
offset_right = 511.0
offset_bottom = 397.0
scale = Vector2(16.0038, 3.05908)
color = Color(0, 1, 0, 1)

[node name="ColorRect9" type="ColorRect" parent="Paint"]
offset_left = 580.0
offset_top = 520.0
offset_right = 620.0
offset_bottom = 560.0
scale = Vector2(10.6838, 3.05908)
color = Color(0, 1, 0, 1)

[node name="Paint2" type="Node2D" parent="."]
position = Vector2(1600, -1462)
scale = Vector2(-1, -1)

[node name="Sprite2D" type="Sprite2D" parent="Paint2"]
modulate = Color(0.784314, 0.784314, 0.784314, 1)
position = Vector2(800.68, 372)
scale = Vector2(2.28002, 1.48)
texture = ExtResource("3_onaeo")

[node name="Sprite2D2" type="Sprite2D" parent="Paint2"]
modulate = Color(0, 1, 0, 1)
position = Vector2(803, 355)
scale = Vector2(1.76002, 1)
texture = ExtResource("3_onaeo")

[node name="ColorRect4" type="ColorRect" parent="Paint2"]
offset_left = 330.0
offset_top = 317.0
offset_right = 1270.0
offset_bottom = 357.0
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect7" type="ColorRect" parent="Paint2"]
offset_left = 540.0
offset_top = 480.0
offset_right = 1060.0
offset_bottom = 520.0
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect2" type="ColorRect" parent="Paint2"]
offset_left = 370.0
offset_top = 357.0
offset_right = 770.0
offset_bottom = 397.0
rotation = 1.5708
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect5" type="ColorRect" parent="Paint2"]
offset_left = 580.0
offset_top = 497.0
offset_right = 880.0
offset_bottom = 537.0
rotation = 1.5708
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect6" type="ColorRect" parent="Paint2"]
offset_left = 1060.0
offset_top = 497.0
offset_right = 1360.0
offset_bottom = 537.0
rotation = 1.5708
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect3" type="ColorRect" parent="Paint2"]
offset_left = 1270.0
offset_top = 357.0
offset_right = 1670.0
offset_bottom = 397.0
rotation = 1.5708
color = Color(0.784314, 0.784314, 0.784314, 1)

[node name="ColorRect8" type="ColorRect" parent="Paint2"]
offset_left = 471.0
offset_top = 357.0
offset_right = 511.0
offset_bottom = 397.0
scale = Vector2(16.0038, 3.05908)
color = Color(0, 1, 0, 1)

[node name="ColorRect9" type="ColorRect" parent="Paint2"]
offset_left = 580.0
offset_top = 520.0
offset_right = 620.0
offset_bottom = 560.0
scale = Vector2(10.6838, 3.05908)
color = Color(0, 1, 0, 1)

[node name="Goals" type="Node2D" parent="."]

[node name="PlayerGoal" type="Area2D" parent="Goals"]
position = Vector2(400, 734)

[node name="ColorRect" type="ColorRect" parent="Goals/PlayerGoal"]
offset_right = 800.0
offset_bottom = 40.0
color = Color(0, 0, 1, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/PlayerGoal"]
position = Vector2(400, 20)
shape = SubResource("RectangleShape2D_ntjtk")

[node name="PlayerGoalParticle" type="CPUParticles2D" parent="Goals/PlayerGoal"]
modulate = Color(1.5, 1.5, 1.5, 1)
self_modulate = Color(0, 0, 1, 1)
position = Vector2(400, 20)
emitting = false
amount = 180
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(400, 1)
direction = Vector2(2.08165e-12, -1)
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 250.0
initial_velocity_max = 500.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_qp73q")
color_ramp = SubResource("Gradient_e1xp3")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="EnemyGoal" type="Area2D" parent="Goals"]
position = Vector2(6, -2462)

[node name="ColorRect" type="ColorRect" parent="Goals/EnemyGoal"]
offset_left = 393.0
offset_top = 228.0
offset_right = 1193.0
offset_bottom = 268.0
color = Color(1, 0, 0, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Goals/EnemyGoal"]
position = Vector2(793, 248)
shape = SubResource("RectangleShape2D_ntjtk")

[node name="EnemyGoalParticle" type="CPUParticles2D" parent="Goals/EnemyGoal"]
modulate = Color(1.5, 1.5, 1.5, 1)
self_modulate = Color(1, 0, 0, 1)
position = Vector2(793, 248)
emitting = false
amount = 180
lifetime = 0.5
one_shot = true
explosiveness = 1.0
emission_shape = 3
emission_rect_extents = Vector2(400, 1)
direction = Vector2(2.08165e-12, 1)
gravity = Vector2(2.08165e-12, 2.08165e-12)
initial_velocity_min = 250.0
initial_velocity_max = 500.0
scale_amount_min = 20.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_qp73q")
color_ramp = SubResource("Gradient_e1xp3")
hue_variation_min = -1.0
hue_variation_max = 1.0

[node name="PlayerSpawn" type="Node2D" parent="."]
position = Vector2(800, 591)

[node name="FoosballPlayers" type="Node2D" parent="."]

[node name="FoosballPlayerBar" parent="FoosballPlayers" instance=ExtResource("5_tfkpo")]
position = Vector2(2.08165e-12, -80)
num_of_players = 2
distance_between_players = 350.0

[node name="FoosballPlayerBar2" parent="FoosballPlayers" instance=ExtResource("5_tfkpo")]
position = Vector2(2.08165e-12, -750)
num_of_players = 4
distance_between_players = 250.0

[node name="FoosballPlayerBar3" parent="FoosballPlayers" instance=ExtResource("5_tfkpo")]
position = Vector2(2.08165e-12, -1424)

[node name="FoosballPlayerBar4" parent="FoosballPlayers" instance=ExtResource("5_tfkpo")]
position = Vector2(2.08165e-12, -2004)
num_of_players = 2
distance_between_players = 250.0

[node name="Walls" type="Node2D" parent="."]
position = Vector2(803, 253)

[node name="Wall" parent="Walls" instance=ExtResource("6_n6ows")]
position = Vector2(-503, -2488)
rotation = 1.5708
scale = Vector2(10, 1)

[node name="Wall2" parent="Walls" instance=ExtResource("6_n6ows")]
position = Vector2(536, -2484)
rotation = 1.5708
scale = Vector2(10, 1)

[node name="Wall4" parent="Walls" instance=ExtResource("6_n6ows")]
position = Vector2(-543, -2512)
scale = Vector2(3.59666, 0.999978)

[node name="Wall5" parent="Walls" instance=ExtResource("6_n6ows")]
position = Vector2(-543, 504)
scale = Vector2(3.59666, 1)

[node name="CanvasModulate" type="CanvasModulate" parent="."]
color = Color(0.894118, 0.843137, 0.937255, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ScoreBox" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -182.0
offset_top = -238.0
offset_right = 182.0
grow_horizontal = 2
grow_vertical = 0
alignment = 1

[node name="PlayerScore" type="Label" parent="CanvasLayer/ScoreBox"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Separator" type="Label" parent="CanvasLayer/ScoreBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 100
text = " : "
horizontal_alignment = 1
vertical_alignment = 1

[node name="EnemyScore" type="Label" parent="CanvasLayer/ScoreBox"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRectTooltip" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.780392, 0.462745, 0.572549, 1)

[node name="HowToPlayTitle" type="Label" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 60
text = "
How to Play:"
horizontal_alignment = 1

[node name="HowToPlayMessage" type="Label" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_font_sizes/font_size = 20
text = "







Press [ESC] to go to the main menu.

Hold left click and drag the mouse
to aim the ball. Let go to jump.

You score in the red goal.

They score in the blue goal.

First to 3 wins!"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -209.5
offset_top = -131.0
offset_right = 209.5
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
text = "You play as a white ball. 
Jumping or colliding stuns you.
While stunned you become grey. 
You can jump again after you turn white.

"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
text = "Can Jump"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("3_onaeo")
expand_mode = 3
stretch_mode = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
layout_mode = 2
text = "Jump Disabled
"

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/VBoxContainer/HBoxContainer2/VBoxContainer2"]
modulate = Color(0.415686, 0.415686, 0.415686, 1)
custom_minimum_size = Vector2(70, 70)
layout_mode = 2
texture = ExtResource("3_onaeo")
expand_mode = 3
stretch_mode = 4

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 20

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_font_sizes/font_size = 36
text = "Dont show again:"
vertical_alignment = 1

[node name="CheckBoxTooltip" type="CheckBox" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
process_mode = 3
layout_mode = 2

[node name="BtnCloseTooltip" type="Button" parent="CanvasLayer/VBoxContainer"]
process_mode = 3
layout_mode = 2
theme_override_font_sizes/font_size = 36
text = "Close
"

[node name="Control" type="Control" parent="CanvasLayer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 100)
layout_mode = 2

[node name="LoseMessage" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.0
offset_right = 45.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "YOU LOSE!"

[node name="WinMessage" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.0
offset_right = 45.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 60
text = "YOU WIN!"

[node name="PlayerGoalMessage" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.0
offset_right = 45.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 1, 1)
theme_override_font_sizes/font_size = 60
text = "GOAL!"

[node name="EnemyGoalMessage" type="Label" parent="CanvasLayer"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -45.0
offset_top = -11.0
offset_right = 45.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "RED SCORED!"

[connection signal="body_entered" from="Goals/PlayerGoal" to="." method="_on_player_goal_body_entered"]
[connection signal="body_entered" from="Goals/EnemyGoal" to="." method="_on_enemy_goal_body_entered"]
[connection signal="toggled" from="CanvasLayer/VBoxContainer/HBoxContainer/CheckBoxTooltip" to="." method="_on_check_box_tooltip_toggled"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/BtnCloseTooltip" to="." method="_on_btn_close_tooltip_pressed"]
